# rowerowe_gminy

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  a.txt  compose.yaml  pyproject.toml  script_download_gml.py  strava.openapi.config.yaml  strava.openapi.yaml
.github/actions/: checkout-build.yaml  py-pdm-setup.yaml
.github/actions/py_pdm_setup/: action.yaml
.github/workflows/: all-container.yml  api-container.yml  checkout-build.yaml  container-template.yaml  geo-ddb-build.yaml  static-data.yaml  wha-container.yml  wkk-container.yml
compose/: config.alloy  nats-server.conf
config/: .gitignore
helm/api/: Chart.yaml  values.yaml
helm/api/templates/: _image.tpl  apiDeployment.yaml  apiSvc.yaml
scripts/: download_gml.py  gml_to_json.py
src/rg_app/api/: __init__.py  __main__.py  app.py  app_debug.py  auth.py  authorize.py  common.py  config.py  hc.py  internals.py  jwt.py  utils.py
src/rg_app/api/controllers/: region.py  router.py  user.py
src/rg_app/api/dependencies/: auth.py  broker.py  config.py  db.py  debug_flag.py  http_client.py  strava.py
src/rg_app/api/models/: athletes.py  auth.py  problem_details.py  region.py  user.py
src/rg_app/api/plugins/: config_plugin.py  di_filler.py
src/rg_app/api/routers/: __init__.py  activities.py  athlete.py  athletes.py  auth.py  health.py  regions.py  user.py
src/rg_app/api_worker/: app.py  app_debug.py  config.py
src/rg_app/api_worker/dependencies/: auth.py  config.py  state.py  strava.py
src/rg_app/api_worker/http/: __init__.py  base.py
src/rg_app/api_worker/nats/: __init__.py  base.py  common.py  stateful_nats_router.py
src/rg_app/api_worker/routers/: __init__.py  activities.py  auth.py  health.py  regions.py
src/rg_app/common/: _config_base.py  config.py  enums.py  strava.py
src/rg_app/common/dependencies/: __init__.py  ti.py
src/rg_app/common/dependencies/state/: common.py
src/rg_app/common/fastapi/dependencies/: broker.py  config.py  util.py
src/rg_app/common/faststream/: dep_util.py  otel.py
src/rg_app/common/internal/: __init__.py  activity_svc.py  common.py  geo_svc.py  helpers.py  user_svc.py
src/rg_app/common/litestar/plugins/: __init__.py  async_exit_stack_plugin.py  di_filler.py  nats.py  otel.py  strava_plugin.py
src/rg_app/common/msg/: __init__.py  base_model.py  base_struct.py  cmd.py
src/rg_app/common/otel/: base.py  config.py
src/rg_app/common/strava/: __init__.py  activities.py  athlete.py  auth.py  helpers.py  rate_limits.py  user.py
src/rg_app/common/strava/models/: activity.py  athlete.py  base.py  webhook.py
src/rg_app/core/: __init__.py
src/rg_app/db/: __init__.py  __main__.py  alembic.ini  decorators.py  manage.py
src/rg_app/db/alembic/: env.py  script.py.mako
src/rg_app/db/alembic/versions/: 225b8c77e066_save_strava_account_creation_date.py  23c757641f3f_add_update_strava_desc_user_setting.py  5ee33b93abdb_.py  65d82432538d_add_last_login_and_signup_dates.py  806238fe62ae_save_region_names_in_db.py  a11b2b488b7e_change_update_desc_column_type_to_int.py  b00b80ec0f51_add_capacity_to_store_all_activities.py  b0f19f3f6010_first_migration_add_user.py  f99ba4e43068_add_regions.py  ff4d8a2b7620_add_activities.py
src/rg_app/db/models/: __init__.py  models.py  user.py
src/rg_app/geo/: __init__.py  __main__.py  duck.py  duck_export.py  duck_source.py  preprocessing.py  simplification.py  source_borders.py  src_load.py
src/rg_app/nats-util/: client.py
src/rg_app/nats_defs/: __main__.py  cloud.py  local.py  subjects.py  utils.py
src/rg_app/nats_util/: __init__.py  client.py  common.py  msg.py
src/rg_app/scrapping/: __main__.py  adm_info.py  coa_download.py
src/rg_app/wha/: __init__.py  __main__.py  app.py  config.py  models.py  otel.py  register_sub.py  router.py
src/rg_app/wha_old/: __main__.py  app.py  common.py  config.py  register_sub.py
src/rg_app/wkk/: __main__.py  app.py  config.py  job.py  models.py  strava_auth.py
src/rg_app/worker/: __main__.py  app.py  common.py  config.py  deps.py  duck_deps.py  otel.py
src/rg_app/worker/dependencies/: config.py  db.py  duckdb.py  http_client.py  message_delayer.py  strava.py
src/rg_app/worker/routers/: __init__.py  activity_cmd.py  activity_svc.py  echo.py  geo_svc.py  incoming_wha.py  stream.py  user_svc.py  webhook_activities.py  webhook_processing.py  webhook_revocations.py
src/rowerowe_gminy/core/: __init__.py  __main__.py
src/rowerowe_gminy/geo/: __init__.py
src/rowerowe_gminy/scrapping/: __init__.py  __main__.py  adm_info.py
terraform/: .gitignore  .terraform.lock.hcl  alloy.tf  cert.tf  cloud.tf  external_secrets.tf  main.tf  nats.tf  postgres.tf  posthog.tf  public.auto.tfvars  rg_app.tf  traefik.tf  variables.tf  wha.tf
terraform/common/: external-secrets.tf  main.tf
terraform/migrated-example/: cfg.yaml  main.tf
terraform/modules/alloy/: k8s.tf  namespace.tf
terraform/modules/alloy/manifests/: config.yaml  deployment.yaml  secret.yaml  svc.yaml
terraform/modules/cert/: k8s.tf
terraform/modules/cert/manifests/: ces.yaml
terraform/modules/external_secrets/: cluster_secret_store.tf  helm.tf  namespace.tf  secrets.tf  variables.tf
terraform/modules/external_secrets/manifests/: css.yaml
terraform/modules/nats/: helm.tf  k8s.tf  namespace.tf  values.yaml
terraform/modules/nats/manifests/: leaf-ngs.secret.yaml  metrics.service.yaml  nats-ws.ir.yaml  pv-js.yaml  pv-resolver.yaml  ws-header.middleware.yaml
terraform/modules/postgres/: helm.tf  k8s.tf  namespace.tf  values.yaml
terraform/modules/postgres/manifests/: pv.yaml  pvc.yaml  secret.yaml
terraform/modules/posthog/: k8s.tf  main.tf  namespace.tf
terraform/modules/posthog/manifests/: posthog.ext-svc-assets.yaml  posthog.ext-svc.yaml  posthog.ingressroute.yaml  posthog.middleware-assets.yaml  posthog.middleware.yaml
terraform/modules/rg-app/: helm.tf  main.tf  namespace.tf
terraform/modules/rg-app/chart/: Chart.yaml
terraform/modules/traefik/: helm.tf  namespace.tf
terraform/modules/wha/: helm.tf  namespace.tf  variables.tf
terraform/modules/wha/chart/: Chart.yaml  values.yaml
(+19 files in other folders)
